Fix vertical align of tag text when heart icon is present

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -2433,6 +2433,7 @@ div.tag_selection span.alltags-take {
     float: relative; top: 1px; right: -322px;
     width: 18px;
     height: 16px;
+    vertical-align: middle;
 }
 div.tag_selection div.owner-tagged span.alltags-take {
     background-image: url(../image/icon-added-to-tags.png);
